package comportamiento.interpreter;

public interface Expression {
  Boolean interpret(String context);
}
